# random

./: .gitignore  :w  BUILD  CNAME  README  SECURITY.md  add_scripts.sh  backup.sh  pants.toml  pkgs.txt  prs.py  setup.sh
.ropeproject/: globalnames
bash/: activator.sh  annotate_repo.sh  backup.sh  backup_bin.sh  binify.sh  check_if_efy_session_11b_still_full.sh  clone.sh  create_key.sh  create_start_virtualenv.sh  delay.sh  delswaps.sh  docker_compose_install.sh  dotfilesbckup.sh  efy_session_11b_still_full.sh  git_setup.sh  lamp.sh  new.sh  newUbuntu.sh  newubuntu.sh  plan.sh  repos_commit.sh  swishmac.sh  tildas.sh  ubuntuG.sh  wiface.sh
clojure/test/: CHANGELOG.md  project.clj
javascript/: trie.js
langs/bash/: annotate.sh  binify.sh  clone.sh  create_start_virtualenv.sh  delay.sh  docker_compose_install.sh  install_stuff.sh  (+7 more)
langs/rust/tx/: Cargo.toml
langs/rust/tx/src/: main.rs
python/: text_me_as_it_goes.py  xkcd_erday.py
ruby/: fib.rb  rot_cipher.rb
sql/: transactions_hw_psql.sql
thechosenones/: accesspoint.py  annotate  annotate.py  annotate_repo.sh  apt-docker-install.sh  apt-pyenv-install.sh  backup.sh  checker.sh  clone.sh  concat.py  countframes.sh  create_start_virtualenv.sh  delswaps.sh  dim.sh  dot_update.sh  dots_update.sh  g.sh  get_spot_auth.sh  git_setup.sh  hdres.sh  hist.sh  htmltext  husky.sh  killes.sh  loadvboxmodules.sh  lock.sh  minecraft.sh  monitor-eb-target-group-health.sh  mytime.py  newuser.sh  play.sh  private.sh  pyright-fix.py  realinternetpoints.sh  reclone.sh  repoo.sh  res.sh  restartvpn.sh  rmhost.py  send_email.py  (+12 more)
(+107 files in other folders)
