[package]
name = "smsg"
version = "0.1.0"
authors = ["Santiago Verdu <santiago@cl.ly>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.12", features = ["client", "http1"] }
tokio = { version = "1.8.4", features = ["full"] }
hyper-tls = "0.5.0"
